# youtube-analytics-project_by_Kusto

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py  вДудь.json
src/: channel.py  playlist.py  video.py
